--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Apresentando Tags HTML</title>
   </head>
   <body>
-    <h1>HTML</h1>
+    <img
+      width="50"
+      src="https://pt.wikipedia.org/static/images/icons/wikipedia.png"
+      alt="logo globo wikipedia"
+    />
+    <font color="red"><h1>Minha Wiki</h1></font>
+    <br />
+
+    <h2><mark>HTML</mark></h2>
+
     <h3>Conteúdo</h3>
     <hr />
     <ol>
@@ -17,14 +26,14 @@
     </ol>
     <br />
     <p>
-      HTML (abreviação para a expressão inglesa HyperText Markup Language, que
-      significa: "Linguagem de Marcação de Hipertexto") é uma linguagem de
+      <strong>HTML</strong>  (abreviação para a expressão inglesa <em><b>HyperText Markup Language</b> </em> , que
+      significa: <i>"Linguagem de Marcação de Hipertexto"</i> ) é uma linguagem de
       marcação utilizada na construção de páginas na Web. Documentos HTML podem
       ser interpretados por navegadores. A tecnologia é fruto da junção entre os
-      padrões HyTime e SGML.
+      padrões <abbr title="Hypermedia/Time-based Document Structuring Language">HyTime</abbr> e <abbr title="Standard Generalized Markup Language">SGML</abbr>.
     </p>
     <p>
-      HyTime é um padrão para a representação estruturada de hipermídia e
+      <abbr title="Hypermedia/Time-based Document Structuring Language">HyTime</abbr> é um padrão para a representação estruturada de hipermídia e
       conteúdo baseado em tempo. Um documento é visto como um conjunto de
       eventos concorrentes dependentes de tempo (como áudio, vídeo, etc.),
       conectados por hiperligações (em inglês: hyperlink e link). O padrão é
@@ -34,6 +43,7 @@
       SGML é um padrão de formatação de textos. Não foi desenvolvido para
       hipertexto, mas tornou-se conveniente para transformar documentos em
       hiper-objetos e para descrever as ligações.
+      <del>texto aleatório com a tag del</del>
     </p>
     <br />
     <h2>História</h2>
@@ -65,7 +75,7 @@
       gramática). A IETF criou um grupo de trabalho para o HTML no ano seguinte,
       e publicou o HTML 2.0 em 1995. Desde 1996, as especificações HTML vêm
       sendo mantidas, com o auxílio de fabricantes de software, pelo World Wide
-      Web Consortium (W3C).[1] Apesar disso, em 2000 a linguagem tornou-se
+      Web Consortium (W3C).<sup><small>[1]</small></sup> Apesar disso, em 2000 a linguagem tornou-se
       também uma norma internacional (ISO/IEC 15445:2000). A recomendação HTML
       4.01 foi publicada no final de 1999 pelo W3C. Uma errata ainda foi lançada
       em 2001.
@@ -74,7 +84,7 @@
       Desde a publicação do HTML 3.5 no final de 1997, o grupo de trabalho da
       W3C tem cada vez mais — e de 2002 a 2006, de forma exclusiva — focado no
       desenvolvimento do XHTML, uma especificação HTML baseada em XML que é
-      considerada pela W3C como um sucessor do HTML.[2][3][4] O XHTML faz uso de
+      considerada pela W3C como um sucessor do HTML.<sup><small>[2][3][4]</small></sup> O XHTML faz uso de
       uma sintaxe mais rigorosa e menos ambígua para tornar o HTML mais simples
       de ser processado e estendido.
     </p>
@@ -83,11 +93,8 @@
       Draft. Apesar de sua sintaxe ser semelhante à de SGML, o HTML5 abandonou
       qualquer tentativa de ser uma aplicação SGML e definiu explicitamente sua
       própria serialização "html", além de uma alternativa baseada em XML, o
-      XHTML5.<sup>[5]</sup>
+      XHTML5.<sup><small>[5]</small></sup>
     </p>
-    <span>Várias versões HTML foram publicadas:<sup>[6]</sup>  </span>
-
-
-
+    <span>Várias versões HTML foram publicadas:<sup><small>[6]</small></sup></span>
   </body>
 </html>
