--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>Apresentando Tags HTML</title>
   </head>
   <body>
-    <img
-      width="50"
-      src="https://pt.wikipedia.org/static/images/icons/wikipedia.png"
-      alt="logo globo wikipedia"
-    />
-    <font color="red"><h1>Minha Wiki</h1></font>
+    <table align="center">
+      <thead>
+        <td>
+          <img
+            width="50"
+            src="https://pt.wikipedia.org/static/images/icons/wikipedia.png"
+            alt="logo globo wikipedia"
+          />
+        </td>
+        <td>
+          <font color="red"><h1>Wikipedia</h1></font>
+        </td>
+      </thead>
+    </table>
+
     <br />
 
     <h2><mark>HTML</mark></h2>
@@ -19,34 +28,40 @@
     <h3>Conteúdo</h3>
     <hr />
     <ol>
-      <li>Início</li>
-      <li>História</li>
-      <li>Marcas (Tags)</li>
-      <li>Estrutura básica do documento</li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="#historia">História</a></li>
+      <li><a href="#tags">Marcas (Tags)</a></li>
     </ol>
     <br />
     <p>
-      <strong>HTML</strong>  (abreviação para a expressão inglesa <em><b>HyperText Markup Language</b> </em> , que
-      significa: <i>"Linguagem de Marcação de Hipertexto"</i> ) é uma linguagem de
-      marcação utilizada na construção de páginas na Web. Documentos HTML podem
-      ser interpretados por navegadores. A tecnologia é fruto da junção entre os
-      padrões <abbr title="Hypermedia/Time-based Document Structuring Language">HyTime</abbr> e <abbr title="Standard Generalized Markup Language">SGML</abbr>.
+      <strong>HTML</strong> (abreviação para a expressão inglesa
+      <em><b>HyperText Markup Language</b> </em> , que significa:
+      <i>"Linguagem de Marcação de Hipertexto"</i> ) é uma linguagem de marcação
+      utilizada na construção de páginas na Web. Documentos HTML podem ser
+      interpretados por navegadores. A tecnologia é fruto da junção entre os
+      padrões
+      <abbr title="Hypermedia/Time-based Document Structuring Language"
+        >HyTime</abbr
+      >
+      e <abbr title="Standard Generalized Markup Language">SGML</abbr>.
     </p>
     <p>
-      <abbr title="Hypermedia/Time-based Document Structuring Language">HyTime</abbr> é um padrão para a representação estruturada de hipermídia e
-      conteúdo baseado em tempo. Um documento é visto como um conjunto de
-      eventos concorrentes dependentes de tempo (como áudio, vídeo, etc.),
-      conectados por hiperligações (em inglês: hyperlink e link). O padrão é
-      independente de outros padrões de processamento de texto em geral.
+      <abbr title="Hypermedia/Time-based Document Structuring Language"
+        >HyTime</abbr
+      >
+      é um padrão para a representação estruturada de hipermídia e conteúdo
+      baseado em tempo. Um documento é visto como um conjunto de eventos
+      concorrentes dependentes de tempo (como áudio, vídeo, etc.), conectados
+      por hiperligações (em inglês: hyperlink e link). O padrão é independente
+      de outros padrões de processamento de texto em geral.
     </p>
     <p>
       SGML é um padrão de formatação de textos. Não foi desenvolvido para
       hipertexto, mas tornou-se conveniente para transformar documentos em
-      hiper-objetos e para descrever as ligações.
-      <del>texto aleatório com a tag del</del>
+      hiper-objetos e para descrever as ligações.<br />
     </p>
     <br />
-    <h2>História</h2>
+    <h2 id="historia">História</h2>
     <hr />
     <p>
       Tim Berners-Lee (físico britânico) criou o HTML original (e outros
@@ -75,18 +90,20 @@
       gramática). A IETF criou um grupo de trabalho para o HTML no ano seguinte,
       e publicou o HTML 2.0 em 1995. Desde 1996, as especificações HTML vêm
       sendo mantidas, com o auxílio de fabricantes de software, pelo World Wide
-      Web Consortium (W3C).<sup><small>[1]</small></sup> Apesar disso, em 2000 a linguagem tornou-se
-      também uma norma internacional (ISO/IEC 15445:2000). A recomendação HTML
-      4.01 foi publicada no final de 1999 pelo W3C. Uma errata ainda foi lançada
-      em 2001.
+      Web Consortium (W3C).<sup><small>[1]</small></sup> Apesar disso, em 2000 a
+      linguagem tornou-se também uma norma internacional (ISO/IEC 15445:2000). A
+      recomendação HTML 4.01 foi publicada no final de 1999 pelo W3C. Uma errata
+      ainda foi lançada em 2001.
     </p>
     <p>
       Desde a publicação do HTML 3.5 no final de 1997, o grupo de trabalho da
       W3C tem cada vez mais — e de 2002 a 2006, de forma exclusiva — focado no
       desenvolvimento do XHTML, uma especificação HTML baseada em XML que é
-      considerada pela W3C como um sucessor do HTML.<sup><small>[2][3][4]</small></sup> O XHTML faz uso de
-      uma sintaxe mais rigorosa e menos ambígua para tornar o HTML mais simples
-      de ser processado e estendido.
+      considerada pela W3C como um sucessor do HTML.<sup
+        ><small>[2][3][4]</small></sup
+      >
+      O XHTML faz uso de uma sintaxe mais rigorosa e menos ambígua para tornar o
+      HTML mais simples de ser processado e estendido.
     </p>
     <p>
       Em janeiro de 2008 o W3C publicou a especificação do HTML5 como Working
@@ -95,6 +112,153 @@
       própria serialização "html", além de uma alternativa baseada em XML, o
       XHTML5.<sup><small>[5]</small></sup>
     </p>
-    <span>Várias versões HTML foram publicadas:<sup><small>[6]</small></sup></span>
+    <span></span>
+    <table border="1" size="10" cellpadding="5" cellspacing="0" width="450px">
+      <caption>
+        Várias versões HTML foram publicadas:<sup><small>[6]</small></sup>
+      </caption>
+      <thead bgcolor="#ccc">
+        <th>Versão</th>
+        <th>Ano</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>HTML</td>
+          <td>1991</td>
+        </tr>
+        <tr>
+          <td>HTML 2.0</td>
+          <td>1995</td>
+        </tr>
+        <tr>
+          <td>HTML 3.2</td>
+          <td>1997</td>
+        </tr>
+        <tr>
+          <td>HTML 4.01</td>
+          <td>1999</td>
+        </tr>
+        <tr>
+          <td>XHTML</td>
+          <td>2000</td>
+        </tr>
+        <tr>
+          <td>HTML5</td>
+          <td>2014</td>
+        </tr>
+        <tr>
+          <td>HTML5.1</td>
+          <td>2016 e 2017 (2ª ed.)</td>
+        </tr>
+        <tr>
+          <td>HTML5.2</td>
+          <td>2017</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <br />
+    <h2 id="tags">Marcas (Tags)</h2>
+    <hr />
+
+    <p>
+      Todo documento HTML possui marcadores (do inglês: tags), palavras entre
+      parênteses angulares (chevron) (< e >); esses marcadores são os comandos
+      de formatação da linguagem. Um elemento é formado por um nome de marcador
+      (tag), atributos, valores e filhos (que podem ser outros elementos ou
+      texto). Os atributos modificam os resultados padrões dos elementos e os
+      valores caracterizam essa mudança.
+    </p>
+    <h4>Exemplo de um elemento simples (nãopossui filhos):</h4>
+    <span>< hr /></span>
+    <br />
+
+    <h4>Exemplo de um elemento composto (possui filhos):</h4>
+
+    <span>< a </span> href="https://pt.wikipedia.org/">Wikipédia
+    <span>< /a></span>
+
+    <ul>
+      <li><span>< a></span> é o marcador de abertura</li>
+      <li><span>< /a></span> é o marcador de fechamento</li>
+      <li>
+        <b>href</b> é o atributo onde é definido a url, que será acessada ao
+        clicar no link.
+      </li>
+    </ul>
+    <br />
+    <h4>Outro exemplo de elemento composto (possui filhos):</h4>
+
+    <span>< a </span>href="https://pt.wikipedia.org" target="_self"><span
+      >< p>Wikipédia< /p ></span
+    ><span>< /a></span>
+
+    <br />
+    <br />
+
+    <ul>
+      <li>p = marcador que define um parágrafo.</li>
+      <li>a = marcador que define uma hiperligação.</li>
+      <li>href = atributo que define a URL da hiperligação.</li>
+      <li>
+        target = atributo que define a forma como a hiperligação será aberta.
+      </li>
+      <li>
+        _self = valor do atributo Target que define que a hiperligação será
+        aberta na mesma guia.
+      </li>
+      <li>/ = define o fechamento do elemento</li>
+    </ul>
+
+    <br />
+    <p>
+      Isso é necessário porque os marcadores servem para definir a formatação de
+      uma porção do documento, e assim marcamos onde começa e termina o conteúdo
+      que receberá a formatação ou marcação necessária, específica. Alguns
+      elementos são chamados “vazios”, pois não marcam uma região de texto,
+      apenas inserem algum elemento no documento.
+    </p>
+    <p>
+      Cada elemento tem os seus atributos possíveis e os seus valores. Um
+      exemplo, é o atributo href que pode ser usado com o elemento a, com o link
+      mas que não pode ser usado com o elemento meta. Isso quer dizer que
+      devemos saber exatamente quais os atributos e valores possíveis para cada
+      elemento.
+    </p>
+    <p>
+      De uma maneira geral o HTML é um poderoso recurso, sendo uma linguagem de
+      marcação muito simples e acessível voltada para a produção e
+      compartilhamento de documentos, imagens, vídeos e áudio via streaming.
+    </p>
+    <p>
+      Na sua versão mais recente, o HTML5, é possível criar marcadores
+      personalizados com JavaScript, linguagem de programação diretamente
+      compatível com o HTML. Cada tag pode ter uma função específica utilizando
+      uma API (Interface de programação de aplicações) diferente, assim como
+      seus nomes e estilos.
+    </p>
+
+    <p>Outros exemplos de Tags</p>
+    <ul>
+      <li><h5>Este é um H5</h5></li>
+      <li><h6>Este é um H6</h6></li>
+      <li><del>texto aleatório com a tag del</del></li>
+      <li>
+        <span
+          >Tag sub utilizada em representações matemáticas ex: 10<sub
+            >2</sub
+          ></span
+        >
+      </li>
+    </ul>
   </body>
+  <br />
+  <br />
+  <br />
+  <a href="/index.html">Voltar ao Topo</a>
+
+  <footer align="center">
+    <a href="https://pt.wikipedia.org/wiki/HTML">@wikipedia</a> todos os
+    direitos reservados, <strong>Feito por Eder Lima</strong>
+  </footer>
 </html>
